--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,17 +1,12 @@
 {
   "name": "@repo/database",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
+  "main": "index.ts",
+  "types": "index.ts",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "dotenv": "^17.2.3",
     "prisma": "^6.17.1"
   }
 }
