added relayer server

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,6 +19,7 @@
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "@exness/types": "*"
   }
 }
