--- a/apps/socket/package.json
+++ b/apps/socket/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "price-poller",
+  "name": "socket",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "npx esbuild ./src/index.ts --bundle --platform=node --outdir=dist --format=cjs --loader:.ts=ts --sourcemap --external:@prisma/client --external:bull --external:ioredis --external:ws ",
@@ -11,14 +10,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "description": "",
   "dependencies": {
+    "@exness/types": "*",
     "@types/ws": "^8.18.1",
-    "bullmq": "^5.65.1",
-    "dotenv": "^17.2.3",
-    "ioredis": "^5.8.2",
-    "ws": "^8.18.3",
-    "zod": "^4.1.13",
-    "@exness/types": "*"
+    "bull": "^4.16.5",
+    "dotenv": "^17.2.1",
+    "ioredis": "^5.7.0",
+    "uuid": "^13.0.0",
+    "ws": "^8.18.3"
   }
 }
