--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -14,7 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@winterfell/database": "*",
+    "@repo/database": "*",
     "typescript": "^5.0.0"
   },
   "dependencies": {
