--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@exness/types": "*",
     "@types/ws": "^8.18.1",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "lightweight-charts": "^5.1.0",
     "next": "15.5.4",
     "next-auth": "^4.24.13",
     "react": "19.1.0",
