--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "lightweight-charts": "^5.1.0",
+    "lucide-react": "^0.562.0",
     "next": "15.5.4",
     "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "ws": "^8.18.3",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
